# revan-oss

./: .gitignore  ABOUT.txt  BUILD.md  CMakeLists.txt  README.md  hub.toml  revan.toml.example
agents/python/: file_scanner.py
hub/: Cargo.toml
hub/revan-core/: Cargo.toml
hub/revan-core/src/: agent.rs  client.rs  lib.rs  protocol.rs
hub/revan-hub/: Cargo.toml
hub/revan-hub/src/: agents.rs  brain.rs  main.rs  monitor.rs
src/: revan.cpp
tools/: bench_revan.py  quant_ab_test.py  test_kv_cache.py
