# revan-hub — Async orchestrator binary

[package]
name = "revan-hub"
version = "0.1.0"
edition = "2021"

[dependencies]
revan-core = { path = "../revan-core" }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
nvml-wrapper = "0.10"
uuid = { version = "1", features = ["v4"] }
anyhow = "1"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.61", features = [
    "Win32_System_JobObjects",
    "Win32_System_Threading",
    "Win32_Foundation",
    "Win32_Security",
] }
